--- a/src/styles/blog-listing.css
+++ b/src/styles/blog-listing.css
@@ -15,3 +15,10 @@ h2 {
   font-weight: 100 !important;
 }
 
+p, div {
+  font-size: 11px !important;
+}
+
+div.blog-post-content {
+  font-size: 11px !important;
+}
