--- a/src/styles/layout-overide.css
+++ b/src/styles/layout-overide.css
@@ -27,6 +27,10 @@ h3 {
 }
 
 p, div {
-  font-size: 16px;
+  font-size: 11px !important;
   font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+}
+
+div.blog-post-content {
+  font-size: 11px !important;
 }
