yooooooo the pictures are WORKING LADIESgit add .git add .git add .git add .git add .! this is all of those changes including an update to everyone's post to include a pic

--- a/src/styles/layout-overide.css
+++ b/src/styles/layout-overide.css
@@ -34,3 +34,9 @@ p, div {
 td {
   font-size: 11px !important;
 }
+
+img {
+  position: static !important; 
+  max-width: 300px !important;
+  text-align: center !important;
+}
