--- a/src/styles/layout-overide.css
+++ b/src/styles/layout-overide.css
@@ -38,5 +38,13 @@ td {
 img {
   position: static !important; 
   max-width: 300px !important;
-  text-align: center !important;
+
 }
+
+.headertest {
+  background: 'pink';
+  height: '90px';
+  margin-bottom: '3rem';
+  border-bottom: '2px solid #e6e6e6';
+}
+
