--- a/src/styles/blog-listing.css
+++ b/src/styles/blog-listing.css
@@ -23,3 +23,9 @@ td{
   font-size: 11px !important;
 }
 
+.headertest {
+  background: #ffd1dc;
+  height: 90px;
+  margin-bottom: 3rem;
+  border-bottom: 2px solid #e6e6e6;
+}
